Update : removed console logs, updated the theme settings

--- a/theme/snippets/cart-drawer.liquid
+++ b/theme/snippets/cart-drawer.liquid
@@ -536,6 +536,7 @@
 
         <div class="cart__ctas" {{ block.shopify_attributes }}>
           <button
+            novalidate
             type="submit"
             id="CartDrawer-Checkout"
             class="cart__checkout-button button"
